# decrypt_file

./: .gitignore  README.md  SM4文件解密工具可行性验证方案.md  draft.md  main.py  pyproject.toml  sm4_cpu_validation.py  sm4_decrypt_standalone.py  sm4_direct_decrypt.py  sm4_gpu_direct_decrypt.py  sm4_gpu_validation.py
decrypt_file/: __init__.py  sm4.py  sm4_torch.py
docs/: SM4文件解密工具可行性验证方案.md  SM4测试与对比教程.md  SM4真实业务样例解密教程.md
scripts/direct_decrypt/: sm4_direct_decrypt.py  sm4_gpu_direct_decrypt.py  utczip_extract.py
scripts/validation/: sm4_cpu_validation.py  sm4_gpu_validation.py
tests/: test_sm4.py
