[project]
name = "decrypt-file"
version = "0.1.0"
description = "SM4 validation utilities for decrypt-file feasibility checks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=41.0.0,<45.0.0",
    "numpy>=2.4.4",
]

[project.optional-dependencies]
gpu = [
    "torch",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
